mobile/android/themes/core/config.css
html
{
font
-
size
:
24px
;
}
input
button
{
font
-
size
:
28px
;
padding
:
5px
;
}
#
filter
-
container
#
new
-
pref
-
container
{
margin
-
bottom
:
10px
;
}
.
pref
-
item
{
padding
-
top
:
10px
;
border
-
top
:
1px
solid
#
ccc
;
}
.
pref
-
item
[
default
=
"
false
"
]
{
font
-
weight
:
bold
;
}
.
pref
-
item
>
*
{
margin
-
bottom
:
10px
;
}
.
modify
-
pref
-
button
{
margin
-
right
:
10px
;
}

