Bug 706272: Vertically align (center) the Clear button in about.config. r=mfinkle
UltraBlame original commit: 47b2ee51a532fa4867464e34b0d0baf4a58bb4ff

--- a/mobile/android/themes/core/config.css
+++ b/mobile/android/themes/core/config.css
@@ -25,6 +25,24 @@ padding
 filter
 -
 container
+{
+display
+:
+-
+moz
+-
+box
+;
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
 #
 new
 -
@@ -33,10 +51,9 @@ pref
 container
 {
 margin
--
-bottom
 :
 10px
+0
 ;
 }
 .
